<resources>
    <string name="app_name">CVI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_fragment">OpenStreetMapceeeeee</string>
    <string name="map_title">Map</string>
    <string name="gallery_fragment">Firebase Cloud Storage</string>
    <string name="gallery_title">Gallery</string>
    <string name="trip_fragment">Répertoire des voyages</string>*
    <string name="trip_title">Voyage</string>
    <string name="item_gallery_description">affiche les images</string>
    <string name="grid_item_description">grille d\'images</string>
    <string name="add_trip_button_desc">bouton d\'ajout d\'un nouveau voyage</string>
    <string name="dialog_add_trip_text">Ajout d\'un nouveau voyage</string>
    <string name="edit_trip_name_text">Entrer le nom du voyage</string>
    <string name="cancel_button_text">Annuler</string>
    <string name="add_button_text">Ajouter</string>
    <string name="edit_trip_button_desc">option pour le voyage</string>
    <string name="add_photos_desc">Bouton d\'ajout de photos</string>
    <string name="preview_trip_desc">Bouton d\'aperçu des photos</string>
    <string name="delete_trip_title">Supprimer le voyage</string>
    <string name="trip_name">Nom du voyage</string>
    <string name="trip_options_button_desc">options pour voyage</string>
    <string name="refresh_button_desc">rafraichissement de l\'affichage des voyages</string>
    <string name="rename_option_title">Renomer le voyage</string>
    <string name="preview_photos_title">Aperçu voyage</string>
    <string name="rename_trip_text">Renommer le nom du voyage</string>
    <string name="rename_text">Entrer le nouveau nom du voyage</string>
    <string name="rename_button_text">Renommer</string>
    <string name="zoom_out_button_desc">Réduire le zoom sur la carte</string>
    <string name="zoom_in_button_desc">Augmenter le zoom sur la carte</string>
    <string name="photos_on_map_button_desc">place les photos sur la map</string>
    <string name="get_location_button_desc">pose des markers pour chaque photos</string>
    <string name="main_activity_text">Dans mon application, il est possible de:\n\n- Créer un voyage en incluant un nom de voyage et des photos \n- Editer ce voyage par en le renommant, le supprimant ou bien\n en y rajoutant des photos\n- Créer plusieurs markers sur la map tel que l\'on puisse identifier où les photos ont été prises (si elles contiennent des données GPS)\n\nTout cela est possible depuis la barre de navigation qui permet de naviguer entre les 3 pages principales</string>
    <string name="main_activity_title">Carnet de voyage intelligent</string>

</resources>