<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="30dp"
    android:layout_marginTop="10dp"
    app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red">

        <TextView
            android:id="@+id/tripNameTextView"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/trip_name"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/options_button"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="300dp"
            android:background="@color/red"
            android:contentDescription="@string/trip_options_button_desc"
            android:src="@drawable/three_dots_vertical"/>

        <ImageButton
            android:id="@+id/preview_photos_button"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@color/blue"
            android:layout_marginStart="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_photo_library_24"
            android:contentDescription="@string/preview_trip_desc" />

        <ImageButton
            android:id="@+id/add_photos_button"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@color/blue"
            android:layout_marginStart="150dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_add_a_photo_24"
            android:contentDescription="@string/add_photos_desc" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
